# razbiram-listen

./: .env.example  .gitignore  BIBLE.md  CHANGELOG.md  CLAUDE-CODE-BRIEFING-razbiram-listen.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.claude/skills/session-end/: SKILL.md
.claude/skills/session-start/: SKILL.md
.github/workflows/: ci.yml
docs/: hub-adr-005-nlp-optional-plugin.md
examples/: SOURCES.md
scripts/: gate.sh  secure.sh  session-snapshot.sh  state.sh
src/razbiram_listen/: __init__.py  align.py  cli.py  contract.py  enrichment.py  jobs.py  library.py  models.py  pipeline.py  segment.py  server.py  sources.py  transcribe.py
tests/: test_align_golden.py  test_contract_compat.py  test_jobs.py  test_library.py  test_models.py  test_pipeline.py  test_retranslate.py  test_segment.py  test_server.py  test_sources.py  test_transcribe.py
tests/golden/: 01_clean_1to1.json  02_punctuation.json  03_case_insensitive.json  04_whisper_dropped_word.json  05_whisper_extra_word.json  06_sentence_gap_interpolation.json  07_number_token.json
viewer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viewer/src/: api.ts  cefr.ts  karaoke.ts  loadListen.ts  main.ts  player.ts  popover.ts  queue.ts  seed.ts  styles.css  sync.ts  types.ts
viewer/tests/: cefr.test.ts  loadListen.test.ts  queue.test.ts  seed.test.ts  sync.test.ts
