[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "razbiram-listen"
version = "0.3.0"
description = "Local-first Bulgarian listening studio: Whisper transcription + a synced karaoke viewer, with optional razbiram-nlp enrichment (glosses/CEFR)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leon Köllerwirth Hlihel" }]
keywords = ["bulgarian", "language-learning", "whisper", "transcription", "cefr", "razbiram"]
dependencies = [
    # Core: transcribe → align → karaoke. No razbiram-nlp here — it is an optional
    # enrichment plugin (see the 'enrich' extra); the core runs without it.
    "faster-whisper>=1.0",
    "pydantic>=2.6",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
# The razbiram-nlp enrichment plugin: adds glosses/CEFR/morphology when installed
# (ECOSYSTEM §3). `pip install razbiram-listen[enrich]`. The shared EnrichedDocument
# contract is consumed from the hub, never forked; listen keeps a shape-compatible
# copy (src/razbiram_listen/contract.py) so the core builds documents without it.
# Pinned to a tag for reproducibility.
enrich = ["razbiram-nlp @ git+https://github.com/leonkoellerwirth-arch/razbiram-nlp@v0.1.0"]
dev = ["ruff>=0.5", "pytest>=8.0"]

[project.scripts]
razbiram-listen = "razbiram_listen.cli:main"

[project.urls]
Homepage = "https://github.com/leonkoellerwirth-arch/razbiram-listen"
Hub = "https://github.com/leonkoellerwirth-arch/razbiram-nlp"

[tool.hatch.build.targets.wheel]
packages = ["src/razbiram_listen"]

[tool.hatch.metadata]
# Required so the git+ reference to the hub is allowed.
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: exercises a real Whisper model; skipped in CI (run locally with -m slow).",
]
# Net-free by default: real-model tests are opt-in.
addopts = "-m 'not slow'"
